# serializer version: 1
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
# name: test_dimmable_light_props[light.kitchen-entry]
========
# name: test_setup[light.device_1-entry]
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'entity_id': 'light.kitchen',
========
    'entity_id': 'light.device_1',
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'platform': 'deako',
========
    'platform': 'lunatone',
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'unique_id': 'uuid',
    'unit_of_measurement': None,
  })
# ---
# name: test_dimmable_light_props[light.kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 127,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'kitchen',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_initial_props[light.kitchen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.kitchen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'deako',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'uuid',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_initial_props[light.kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'kitchen',
========
    'unique_id': '12345-device1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.device_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Device 1',
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'entity_id': 'light.kitchen',
========
    'entity_id': 'light.device_1',
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
# name: test_light_setup_with_device[light.some_device-entry]
========
# name: test_setup[light.device_2-entry]
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'entity_id': 'light.some_device',
========
    'entity_id': 'light.device_2',
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'platform': 'deako',
========
    'platform': 'lunatone',
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'unique_id': 'some_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_setup_with_device[light.some_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 1,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'some device',
========
    'unique_id': '12345-device2',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.device_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Device 2',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.device_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup[light.lunatone_12345_line0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.lunatone_12345_line0',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12345-line0',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.lunatone_12345_line0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'brightness': None,
      'color_mode': None,
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
<<<<<<<< HEAD:tests/components/deako/snapshots/test_light.ambr
    'entity_id': 'light.some_device',
========
    'entity_id': 'light.lunatone_12345_line0',
>>>>>>>> 2026.3.4:tests/components/lunatone/snapshots/test_light.ambr
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[light.lunatone_12345_line1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.lunatone_12345_line1',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12345-line1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.lunatone_12345_line1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'brightness': None,
      'color_mode': None,
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.lunatone_12345_line1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
